--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <body bgcolor="#f0ffff">
-<link rel="icon" href="http://www.fermilecce.edu.it/templates/i.i.s.s.enricofermi/favicon.ico" />
+<link rel="icon" href="http://www.fermilecce.edu.it/templates/i.i.s.s.enricofermi/favicon.ico">
 <title>ORARIO 4B Inf 2020-2021</title>
-<center><h1>ORARIO 4B Inf 2020-2021</h1></center>
+<center><h1>ORARIO 4B Inf 2021</h1></center>
 <table width="75%" border="1" align="center" bgcolor="#f0f8ff">
 <tbody>
 <tr>
