--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </tr>
 <tr>
 <td style="width: 128px;"><strong>10-11</strong></td>
-<td style="width: 10px;"><a href="https://meet.google.com/lookup/grkclbjqhq?authuser=0&amp;hs=179"_blank">DE LUCA</a></td>
+<td style="width: 10px;"><a href="https://meet.google.com/lookup/grkclbjqhq?authuser=0&amp;hs=179"target="_blank">DE LUCA</a></td>
 <td style="width: 66px;"><a href="https://meet.google.com/lookup/ezgnxljapy?authuser=0&amp;hs=179"target="_blank">PICCINNI</a></td>
 <td style="width: 93px;"><a href="https://meet.google.com/lookup/fsndiqpii3?authuser=0&amp;hs=179"target="_blank">CRET&Igrave; / PALADINI</a></td>
 <td style="width: 88px;"><a href="https://meet.google.com/lookup/evsiw7pl3a?authuser=0&amp;hs=179"target="_blank">MARITATI</a></td>
