--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<link rel="shortcut icon" href="</favicon.ico" />
 <body bgcolor="#f0ffff">
 <title>ORARIO 4B Inf 2020-2021</title>
 <center><h1>ORARIO 4B Inf 2021</h1></center>
