--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<link rel="shortcut icon" href="/favicon.ico" />
+<link rel="shortcut icon" href="/orario/favicon.ico" />
 <body bgcolor="#f0ffff">
 <title>ORARIO 4B Inf 2020-2021</title>
 <center><h1>ORARIO 4B Inf 2021</h1></center>
