--- a/index.html
+++ b/index.html
@@ -28,22 +28,22 @@
 <td style="width: 66px;"><a href="https://meet.google.com/lookup/ezgnxljapy?authuser=0&amp;hs=179"target="_blank">PICCINNI</a></td>
 <td style="width: 93px;"><a href="https://meet.google.com/lookup/fpwa2dldlb?authuser=0&amp;hs=179"target="_blank">NIGRO / PALADINI</a></td>
 <td style="width: 88px;"><a href="https://meet.google.com/lookup/dcer7jvhlp?authuser=0&amp;hs=179"target="_blank">PICCINNO</a></td>
-<td style="width: 71px;"><a href="https://meet.google.com/lookup/heslwx7zu4?authuser=0&hs=179"target="_blank">MARITATI</a></td>
-<td style="width: 71px;"><a href="https://meet.google.com/lookup/heslwx7zu4?authuser=0&hs=179"target="_blank">MARITATI</a></td>
+<td style="width: 71px;"><a href="https://meet.google.com/lookup/emf7trusuo?authuser=0&hs=179"target="_blank">MARITATI</a></td>
+<td style="width: 71px;"><a href="https://meet.google.com/lookup/emf7trusuo?authuser=0&hs=179"target="_blank">MARITATI</a></td>
 </tr>
 <tr>
 <td style="width: 128px;"><strong>10-11</strong></td>
 <td style="width: 10px;"><a href="https://meet.google.com/lookup/grkclbjqhq?authuser=0&amp;hs=179"target="_blank">DE LUCA</a></td>
 <td style="width: 66px;"><a href="https://meet.google.com/lookup/ezgnxljapy?authuser=0&amp;hs=179"target="_blank">PICCINNI</a></td>
 <td style="width: 93px;"><a href="https://meet.google.com/lookup/fsndiqpii3?authuser=0&amp;hs=179"target="_blank">CRET&Igrave; / PALADINI</a></td>
-<td style="width: 88px;"><a href="https://meet.google.com/lookup/heslwx7zu4?authuser=0&hs=179"target="_blank">MARITATI</a></td>
+<td style="width: 88px;"><a href="https://meet.google.com/lookup/emf7trusuo?authuser=0&hs=179"target="_blank">MARITATI</a></td>
 <td style="width: 71px;"><a href="https://meet.google.com/lookup/d424f5npaw?authuser=0&amp;hs=179"target="_blank">BRUNO / DE LUCA</a></td>
 <td style="width: 71px;"><a href="https://meet.google.com/lookup/dcer7jvhlp?authuser=0&amp;hs=179"target="_blank">PICCINNO</a></td>
 </tr>
 <tr>
 <td style="width: 128px;"><strong>11-12</strong></td>
 <td style="width: 10px;">SERIO</td>
-<td style="width: 66px;"><a href="https://meet.google.com/lookup/heslwx7zu4?authuser=0&hs=179"target="_blank">MARITATI</a></td>
+<td style="width: 66px;"><a href="https://meet.google.com/lookup/emf7trusuo?authuser=0&hs=179"target="_blank">MARITATI</a></td>
 <td style="width: 93px;"><a href="https://meet.google.com/lookup/fsndiqpii3?authuser=0&amp;hs=179"target="_blank">CRET&Igrave; - PALADINI</a></td>
 <td style="width: 88px;"><a href="https://meet.google.com/lookup/fsndiqpii3?authuser=0&amp;hs=179"target="_blank">CRET&Igrave; / PALADINI</a></td>
 <td style="width: 71px;"><a href="https://meet.google.com/lookup/d424f5npaw?authuser=0&amp;hs=179"target="_blank">BRUNO / DE LUCA</a></td>
