--- a/index.html
+++ b/index.html
@@ -18,54 +18,54 @@
 <td style="width: 10px;">&nbsp;-</td>
 <td style="width: 66px;">&nbsp;-</td>
 <td style="width: 93px;">&nbsp;-</td>
-<td style="width: 88px;"><a href="https://meet.google.com/lookup/ezgnxljapy?authuser=0&amp;hs=179" target="_blank">PICCINNI</a></td>
+<td style="width: 88px;"><a href="https://meet.google.com/lookup/ezgnxljapy" target="_blank">PICCINNI</a></td>
 <td style="width: 71px;">&nbsp;-</td>
-<td style="width: 71px;"><a href="https://meet.google.com/lookup/ezgnxljapy?authuser=0&amp;hs=179"target="_blank">PICCINNI</a></td>
+<td style="width: 71px;"><a href="https://meet.google.com/lookup/ezgnxljapy"target="_blank">PICCINNI</a></td>
 </tr>
 <tr>
 <td style="width: 128px;"><strong>9-10</strong></td>
-<td style="width: 10px;"><a href="https://meet.google.com/lookup/d424f5npaw?authuser=0&amp;hs=179"target="_blank">BRUNO</a></td>
-<td style="width: 66px;"><a href="https://meet.google.com/lookup/ezgnxljapy?authuser=0&amp;hs=179"target="_blank">PICCINNI</a></td>
-<td style="width: 93px;"><a href="https://meet.google.com/lookup/fpwa2dldlb?authuser=0&amp;hs=179"target="_blank">NIGRO / PALADINI</a></td>
-<td style="width: 88px;"><a href="https://meet.google.com/lookup/dcer7jvhlp?authuser=0&amp;hs=179"target="_blank">PICCINNO</a></td>
-<td style="width: 71px;"><a href="https://meet.google.com/lookup/emf7trusuo?authuser=0&hs=179"target="_blank">MARITATI</a></td>
-<td style="width: 71px;"><a href="https://meet.google.com/lookup/emf7trusuo?authuser=0&hs=179"target="_blank">MARITATI</a></td>
+<td style="width: 10px;"><a href="https://meet.google.com/lookup/d424f5npaw"target="_blank">BRUNO</a></td>
+<td style="width: 66px;"><a href="https://meet.google.com/lookup/ezgnxljapy"target="_blank">PICCINNI</a></td>
+<td style="width: 93px;"><a href="https://meet.google.com/lookup/fpwa2dldlb"target="_blank">NIGRO / PALADINI</a></td>
+<td style="width: 88px;"><a href="https://meet.google.com/lookup/dcer7jvhlp"target="_blank">PICCINNO</a></td>
+<td style="width: 71px;"><a href="https://meet.google.com/lookup/emf7trusuo"target="_blank">MARITATI</a></td>
+<td style="width: 71px;"><a href="https://meet.google.com/lookup/emf7trusuo"target="_blank">MARITATI</a></td>
 </tr>
 <tr>
 <td style="width: 128px;"><strong>10-11</strong></td>
-<td style="width: 10px;"><a href="https://meet.google.com/lookup/grkclbjqhq?authuser=0&amp;hs=179"target="_blank">DE LUCA</a></td>
-<td style="width: 66px;"><a href="https://meet.google.com/lookup/ezgnxljapy?authuser=0&amp;hs=179"target="_blank">PICCINNI</a></td>
-<td style="width: 93px;"><a href="https://meet.google.com/lookup/fsndiqpii3?authuser=0&amp;hs=179"target="_blank">CRET&Igrave; / PALADINI</a></td>
-<td style="width: 88px;"><a href="https://meet.google.com/lookup/emf7trusuo?authuser=0&hs=179"target="_blank">MARITATI</a></td>
-<td style="width: 71px;"><a href="https://meet.google.com/lookup/d424f5npaw?authuser=0&amp;hs=179"target="_blank">BRUNO / DE LUCA</a></td>
-<td style="width: 71px;"><a href="https://meet.google.com/lookup/dcer7jvhlp?authuser=0&amp;hs=179"target="_blank">PICCINNO</a></td>
+<td style="width: 10px;"><a href="https://meet.google.com/lookup/grkclbjqhq"target="_blank">DE LUCA</a></td>
+<td style="width: 66px;"><a href="https://meet.google.com/lookup/ezgnxljapy"target="_blank">PICCINNI</a></td>
+<td style="width: 93px;"><a href="https://meet.google.com/lookup/fsndiqpii3"target="_blank">CRET&Igrave; / PALADINI</a></td>
+<td style="width: 88px;"><a href="https://meet.google.com/lookup/emf7trusuo"target="_blank">MARITATI</a></td>
+<td style="width: 71px;"><a href="https://meet.google.com/lookup/d424f5npaw"target="_blank">BRUNO / DE LUCA</a></td>
+<td style="width: 71px;"><a href="https://meet.google.com/lookup/dcer7jvhlp"target="_blank">PICCINNO</a></td>
 </tr>
 <tr>
 <td style="width: 128px;"><strong>11-12</strong></td>
 <td style="width: 10px;">SERIO</td>
-<td style="width: 66px;"><a href="https://meet.google.com/lookup/emf7trusuo?authuser=0&hs=179"target="_blank">MARITATI</a></td>
-<td style="width: 93px;"><a href="https://meet.google.com/lookup/fsndiqpii3?authuser=0&amp;hs=179"target="_blank">CRET&Igrave; - PALADINI</a></td>
-<td style="width: 88px;"><a href="https://meet.google.com/lookup/fsndiqpii3?authuser=0&amp;hs=179"target="_blank">CRET&Igrave; / PALADINI</a></td>
-<td style="width: 71px;"><a href="https://meet.google.com/lookup/d424f5npaw?authuser=0&amp;hs=179"target="_blank">BRUNO / DE LUCA</a></td>
-<td style="width: 71px;"><a href="https://meet.google.com/lookup/fpwa2dldlb?authuser=0&amp;hs=179"target="_blank">NIGRO</a></td>
+<td style="width: 66px;"><a href="https://meet.google.com/lookup/emf7trusuo"target="_blank">MARITATI</a></td>
+<td style="width: 93px;"><a href="https://meet.google.com/lookup/fsndiqpii3"target="_blank">CRET&Igrave; - PALADINI</a></td>
+<td style="width: 88px;"><a href="https://meet.google.com/lookup/fsndiqpii3"target="_blank">CRET&Igrave; / PALADINI</a></td>
+<td style="width: 71px;"><a href="https://meet.google.com/lookup/d424f5npaw"target="_blank">BRUNO / DE LUCA</a></td>
+<td style="width: 71px;"><a href="https://meet.google.com/lookup/fpwa2dldlb"target="_blank">NIGRO</a></td>
 </tr>
 <tr>
 <td style="width: 128px;"><strong>12-13</strong></td>
-<td style="width: 10px;"><a href="https://meet.google.com/lookup/ht35tjozs5?authuser=0&amp;hs=179"target="_blank">PESANTE</a></td>
-<td style="width: 66px;"><a href="https://meet.google.com/lookup/fpwa2dldlb?authuser=0&amp;hs=179"target="_blank">NIGRO / PALADINI</a></td>
-<td style="width: 93px;"><a href="https://meet.google.com/lookup/grkclbjqhq?authuser=0&amp;hs=179"target="_blank">DE LUCA / CEROFOLINI</a></td>
-<td style="width: 88px;"><a href="https://meet.google.com/lookup/fsndiqpii3?authuser=0&amp;hs=179"target="_blank">CRET&Igrave; / PALADINI</a></td>
-<td style="width: 71px;"><a href="https://meet.google.com/lookup/ezgnxljapy?authuser=0&amp;hs=179"target="_blank">PICCINNI</a></td>
-<td style="width: 71px;"><a href="https://meet.google.com/lookup/ht35tjozs5?authuser=0&amp;hs=179"target="_blank">PESANTE</a></td>
+<td style="width: 10px;"><a href="https://meet.google.com/lookup/ht35tjozs5"target="_blank">PESANTE</a></td>
+<td style="width: 66px;"><a href="https://meet.google.com/lookup/fpwa2dldlb"target="_blank">NIGRO / PALADINI</a></td>
+<td style="width: 93px;"><a href="https://meet.google.com/lookup/grkclbjqhq"target="_blank">DE LUCA / CEROFOLINI</a></td>
+<td style="width: 88px;"><a href="https://meet.google.com/lookup/fsndiqpii3"target="_blank">CRET&Igrave; / PALADINI</a></td>
+<td style="width: 71px;"><a href="https://meet.google.com/lookup/ezgnxljapy"target="_blank">PICCINNI</a></td>
+<td style="width: 71px;"><a href="https://meet.google.com/lookup/ht35tjozs5"target="_blank">PESANTE</a></td>
 </tr>
 <tr>
 <td style="width: 128px;"><strong>13-14</strong></td>
 <td style="width: 10px;">&nbsp;-</td>
-<td style="width: 66px;"><a href="https://meet.google.com/lookup/fpwa2dldlb?authuser=0&amp;hs=179"target="_blank">NIGRO</a></td>
+<td style="width: 66px;"><a href="https://meet.google.com/lookup/fpwa2dldlb"target="_blank">NIGRO</a></td>
 <td style="width: 93px;">-</td>
-<td style="width: 88px;"><a href="https://meet.google.com/lookup/grkclbjqhq?authuser=0&amp;hs=179"target="_blank">DE LUCA / CEROFOLINI</a></td>
-<td style="width: 71px;"><a href="https://meet.google.com/lookup/ht35tjozs5?authuser=0&amp;hs=179"target="_blank">PESANTE</a></td>
-<td style="width: 71px;"><a href="https://meet.google.com/lookup/fsndiqpii3?authuser=0&amp;hs=179"target="_blank">CRET&Igrave;</a></td>
+<td style="width: 88px;"><a href="https://meet.google.com/lookup/grkclbjqhq"target="_blank">DE LUCA / CEROFOLINI</a></td>
+<td style="width: 71px;"><a href="https://meet.google.com/lookup/ht35tjozs5"target="_blank">PESANTE</a></td>
+<td style="width: 71px;"><a href="https://meet.google.com/lookup/fsndiqpii3"target="_blank">CRET&Igrave;</a></td>
 </tr>
 <tr>
 <td style="width: 128px;">&nbsp;</td>
@@ -88,7 +88,7 @@
 <tr>
 <td style="width: 128px;"><strong>16-17</strong></td>
 <td style="width: 10px;">&nbsp;</td>
-<td style="width: 66px;"><a href="https://meet.google.com/lookup/ezgnxljapy?authuser=0&amp;hs=179"target="_blank">PICCINNI</a></td>
+<td style="width: 66px;"><a href="https://meet.google.com/lookup/ezgnxljapy"target="_blank">PICCINNI</a></td>
 <td style="width: 93px;">&nbsp;</td>
 <td style="width: 88px;">&nbsp;</td>
 <td style="width: 71px;">&nbsp;</td>
@@ -97,7 +97,7 @@
 <tr>
 <td style="width: 128px;"><strong>17-18</strong></td>
 <td style="width: 10px;">&nbsp;</td>
-<td style="width: 66px;">&nbsp;<a href="https://meet.google.com/lookup/fsndiqpii3?authuser=0&amp;hs=179"target="_blank">CRET&Igrave;</a></td>
+<td style="width: 66px;">&nbsp;<a href="https://meet.google.com/lookup/fsndiqpii3"target="_blank">CRET&Igrave;</a></td>
 <td style="width: 93px;">&nbsp;</td>
 <td style="width: 88px;">&nbsp;</td>
 <td style="width: 88px;">&nbsp;</td>
