--- a/index.html
+++ b/index.html
@@ -1,110 +1,108 @@
-<link rel="shortcut icon" href="/orario/favicon.ico" />
-<body bgcolor="#f0ffff">
-<title>ORARIO 4B Inf 2020-2021</title>
-<center><h1>ORARIO 4B Inf 2021</h1></center>
-<table width="75%" border="1" align="center" bgcolor="#f0f8ff">
+<p>&nbsp;</p>
+<center>
+<h1>ORARIO 4B Inf 2021</h1>
+</center>
+<table style="height: 295px; width: 75%;" border="1" width="75%" align="center" bgcolor="#f0f8ff">
 <tbody>
-<tr>
-<td style="width: 128px;">&nbsp;</td>
-<td style="width: 10px;"><strong>LUNED&Igrave;</strong></td>
-<td style="width: 66px;"><strong>MARTED&Igrave;</strong></td>
-<td style="width: 93px;"><strong>MERCOLED&Igrave;</strong></td>
-<td style="width: 88px;"><strong>GIOVED&Igrave;</strong></td>
-<td style="width: 71px;"><strong>VENERD&Igrave;</strong></td>
-<td style="width: 71px;"><strong>SABATO</strong></td>
+<tr style="height: 17px;">
+<td style="width: 8.65052%; height: 17px;">&nbsp;</td>
+<td style="width: 16.09%; height: 17px;"><strong>LUNED&Igrave;</strong></td>
+<td style="width: 13.4948%; height: 17px;"><strong>MARTED&Igrave;</strong></td>
+<td style="width: 16.955%; height: 17px;"><strong>MERCOLED&Igrave;</strong></td>
+<td style="width: 16.09%; height: 17px;"><strong>GIOVED&Igrave;</strong></td>
+<td style="width: 13.1488%; height: 17px;"><strong>VENERD&Igrave;</strong></td>
+<td style="width: 13.1488%; height: 17px;"><strong>SABATO</strong></td>
 </tr>
-<tr>
-<td style="width: 128px;"><strong>8-9</strong></td>
-<td style="width: 10px;">&nbsp;-</td>
-<td style="width: 66px;">&nbsp;-</td>
-<td style="width: 93px;">&nbsp;-</td>
-<td style="width: 88px;"><a href="https://meet.google.com/lookup/ezgnxljapy" target="_blank">PICCINNI</a></td>
-<td style="width: 71px;">&nbsp;-</td>
-<td style="width: 71px;"><a href="https://meet.google.com/lookup/ezgnxljapy"target="_blank">PICCINNI</a></td>
+<tr style="height: 17px;">
+<td style="width: 8.65052%; height: 18px;"><strong>8:15-9:15</strong></td>
+<td style="width: 16.09%; height: 18px;"><a href="https://meet.google.com/lookup/d424f5npaw" target="_blank" rel="noopener">BRUNO</a></td>
+<td style="width: 13.4948%; height: 18px;"><a href="https://meet.google.com/lookup/ezgnxljapy" target="_blank" rel="noopener">PICCINNI</a></td>
+<td style="width: 16.955%; height: 18px;"><a href="https://meet.google.com/lookup/d424f5npaw" target="_blank" rel="noopener">BRUNO / DE LUCA</a></td>
+<td style="width: 16.09%; height: 18px;"><a href="https://meet.google.com/lookup/giovwylc4a" target="_blank" rel="noopener">MARITATI</a></td>
+<td style="width: 13.1488%; height: 18px;"><a href="https://meet.google.com/lookup/fpwa2dldlb" target="_blank" rel="noopener">NIGRO / PALADINI</a></td>
+<td style="width: 13.1488%; height: 18px;"><a href="https://meet.google.com/lookup/dcer7jvhlp" target="_blank" rel="noopener">PICCINNO</a></td>
 </tr>
-<tr>
-<td style="width: 128px;"><strong>9-10</strong></td>
-<td style="width: 10px;"><a href="https://meet.google.com/lookup/d424f5npaw"target="_blank">BRUNO</a></td>
-<td style="width: 66px;"><a href="https://meet.google.com/lookup/ezgnxljapy"target="_blank">PICCINNI</a></td>
-<td style="width: 93px;"><a href="https://meet.google.com/lookup/fpwa2dldlb"target="_blank">NIGRO / PALADINI</a></td>
-<td style="width: 88px;"><a href="https://meet.google.com/lookup/dcer7jvhlp"target="_blank">PICCINNO</a></td>
-<td style="width: 71px;"><a href="https://meet.google.com/lookup/emf7trusuo"target="_blank">MARITATI</a></td>
-<td style="width: 71px;"><a href="https://meet.google.com/lookup/emf7trusuo"target="_blank">MARITATI</a></td>
+<tr style="height: 35px;">
+<td style="width: 8.65052%; height: 35px;"><strong>9:15-10:15</strong></td>
+<td style="width: 16.09%; height: 35px;"><a href="https://meet.google.com/lookup/grkclbjqhq" target="_blank" rel="noopener">DE LUCA / CEROFOLINI</a></td>
+<td style="width: 13.4948%; height: 35px;"><a href="https://meet.google.com/lookup/fpwa2dldlb" target="_blank" rel="noopener">NIGRO</a></td>
+<td style="width: 16.955%; height: 35px;"><a href="https://meet.google.com/lookup/d424f5npaw" target="_blank" rel="noopener">BRUNO / DE LUCA</a></td>
+<td style="width: 16.09%; height: 35px;"><a href="https://meet.google.com/lookup/ezgnxljapy" target="_blank" rel="noopener">PICCINNI</a></td>
+<td style="width: 13.1488%; height: 35px;"><a href="https://meet.google.com/lookup/giovwylc4a" target="_blank" rel="noopener">MARITATI</a></td>
+<td style="width: 13.1488%; height: 35px;"><a href="https://meet.google.com/lookup/giovwylc4a" target="_blank" rel="noopener">MARITATI</a></td>
 </tr>
-<tr>
-<td style="width: 128px;"><strong>10-11</strong></td>
-<td style="width: 10px;"><a href="https://meet.google.com/lookup/grkclbjqhq"target="_blank">DE LUCA</a></td>
-<td style="width: 66px;"><a href="https://meet.google.com/lookup/ezgnxljapy"target="_blank">PICCINNI</a></td>
-<td style="width: 93px;"><a href="https://meet.google.com/lookup/fsndiqpii3"target="_blank">CRET&Igrave; / PALADINI</a></td>
-<td style="width: 88px;"><a href="https://meet.google.com/lookup/emf7trusuo"target="_blank">MARITATI</a></td>
-<td style="width: 71px;"><a href="https://meet.google.com/lookup/d424f5npaw"target="_blank">BRUNO / DE LUCA</a></td>
-<td style="width: 71px;"><a href="https://meet.google.com/lookup/dcer7jvhlp"target="_blank">PICCINNO</a></td>
+<tr style="height: 35px;">
+<td style="width: 8.65052%; height: 35px;"><strong>10:15-11:15</strong></td>
+<td style="width: 16.09%; height: 35px;">SERIO</td>
+<td style="width: 13.4948%; height: 35px;"><a href="https://meet.google.com/lookup/ht35tjozs5" target="_blank" rel="noopener">PESANTE</a></td>
+<td style="width: 16.955%; height: 35px;"><a href="https://meet.google.com/lookup/fsndiqpii3" target="_blank" rel="noopener">CRET&Igrave; / PALADINI</a></td>
+<td style="width: 16.09%; height: 35px;"><a href="https://meet.google.com/lookup/grkclbjqhq" target="_blank" rel="noopener">DE LUCA / CEROFOLINI</a></td>
+<td style="width: 13.1488%; height: 35px;"><a href="https://meet.google.com/lookup/giovwylc4a" target="_blank" rel="noopener">MARITATI</a></td>
+<td style="width: 13.1488%; height: 35px;"><a href="https://meet.google.com/lookup/fpwa2dldlb" target="_blank" rel="noopener">NIGRO</a></td>
 </tr>
-<tr>
-<td style="width: 128px;"><strong>11-12</strong></td>
-<td style="width: 10px;">SERIO</td>
-<td style="width: 66px;"><a href="https://meet.google.com/lookup/emf7trusuo"target="_blank">MARITATI</a></td>
-<td style="width: 93px;"><a href="https://meet.google.com/lookup/fsndiqpii3"target="_blank">CRET&Igrave; - PALADINI</a></td>
-<td style="width: 88px;"><a href="https://meet.google.com/lookup/fsndiqpii3"target="_blank">CRET&Igrave; / PALADINI</a></td>
-<td style="width: 71px;"><a href="https://meet.google.com/lookup/d424f5npaw"target="_blank">BRUNO / DE LUCA</a></td>
-<td style="width: 71px;"><a href="https://meet.google.com/lookup/fpwa2dldlb"target="_blank">NIGRO</a></td>
+<tr style="height: 35px;">
+<td style="width: 8.65052%; height: 35px;"><strong>11:15-12:15</strong></td>
+<td style="width: 16.09%; height: 35px;"><a href="https://meet.google.com/lookup/ht35tjozs5" target="_blank" rel="noopener">PESANTE</a></td>
+<td style="width: 13.4948%; height: 35px;"><a href="https://meet.google.com/lookup/grkclbjqhq" target="_blank" rel="noopener">DE LUCA</a></td>
+<td style="width: 16.955%; height: 35px;"><a href="https://meet.google.com/lookup/fsndiqpii3" target="_blank" rel="noopener">CRET&Igrave; / PALADINI</a></td>
+<td style="width: 16.09%; height: 35px;"><a href="https://meet.google.com/lookup/fsndiqpii3" target="_blank" rel="noopener">CRET&Igrave; / PALADINI</a></td>
+<td style="width: 13.1488%; height: 35px;"><a href="https://meet.google.com/lookup/ezgnxljapy" target="_blank" rel="noopener">PICCINNI</a></td>
+<td style="width: 13.1488%; height: 35px;"><a href="https://meet.google.com/lookup/ht35tjozs5" target="_blank" rel="noopener">PESANTE</a></td>
 </tr>
-<tr>
-<td style="width: 128px;"><strong>12-13</strong></td>
-<td style="width: 10px;"><a href="https://meet.google.com/lookup/ht35tjozs5"target="_blank">PESANTE</a></td>
-<td style="width: 66px;"><a href="https://meet.google.com/lookup/fpwa2dldlb"target="_blank">NIGRO / PALADINI</a></td>
-<td style="width: 93px;"><a href="https://meet.google.com/lookup/grkclbjqhq"target="_blank">DE LUCA / CEROFOLINI</a></td>
-<td style="width: 88px;"><a href="https://meet.google.com/lookup/fsndiqpii3"target="_blank">CRET&Igrave; / PALADINI</a></td>
-<td style="width: 71px;"><a href="https://meet.google.com/lookup/ezgnxljapy"target="_blank">PICCINNI</a></td>
-<td style="width: 71px;"><a href="https://meet.google.com/lookup/ht35tjozs5"target="_blank">PESANTE</a></td>
+<tr style="height: 35px;">
+<td style="width: 8.65052%; height: 35px;"><strong>12:15-13:15</strong></td>
+<td style="width: 16.09%; height: 35px;"><a href="https://meet.google.com/lookup/fsndiqpii3" target="_blank" rel="noopener">CRET&Igrave;</a></td>
+<td style="width: 13.4948%; height: 35px;"><a href="https://meet.google.com/lookup/dcer7jvhlp" target="_blank" rel="noopener">PICCINNO</a></td>
+<td style="width: 16.955%; height: 35px;"><a href="https://meet.google.com/lookup/fpwa2dldlb" target="_blank" rel="noopener">NIGRO / PALADINI</a></td>
+<td style="width: 16.09%; height: 35px;"><a href="https://meet.google.com/lookup/fsndiqpii3" target="_blank" rel="noopener">CRET&Igrave; / PALADINI</a></td>
+<td style="width: 13.1488%; height: 35px;"><a href="https://meet.google.com/lookup/ezgnxljapy" target="_blank" rel="noopener">PICCINNI</a></td>
+<td style="width: 13.1488%; height: 35px;"><a href="https://meet.google.com/lookup/ezgnxljapy" target="_blank" rel="noopener">PICCINNI</a></td>
 </tr>
-<tr>
-<td style="width: 128px;"><strong>13-14</strong></td>
-<td style="width: 10px;">&nbsp;-</td>
-<td style="width: 66px;"><a href="https://meet.google.com/lookup/fpwa2dldlb"target="_blank">NIGRO</a></td>
-<td style="width: 93px;">-</td>
-<td style="width: 88px;"><a href="https://meet.google.com/lookup/grkclbjqhq"target="_blank">DE LUCA / CEROFOLINI</a></td>
-<td style="width: 71px;"><a href="https://meet.google.com/lookup/ht35tjozs5"target="_blank">PESANTE</a></td>
-<td style="width: 71px;"><a href="https://meet.google.com/lookup/fsndiqpii3"target="_blank">CRET&Igrave;</a></td>
+<tr style="height: 35px;">
+<td style="width: 8.65052%; height: 16px;">&nbsp;</td>
+<td style="width: 16.09%; height: 16px;">&nbsp;</td>
+<td style="width: 13.4948%; height: 16px;">&nbsp;</td>
+<td style="width: 16.955%; height: 16px;">&nbsp;</td>
+<td style="width: 16.09%; height: 16px;">&nbsp;</td>
+<td style="width: 13.1488%; height: 16px;">&nbsp;</td>
+<td style="width: 13.1488%; height: 16px;">&nbsp;</td>
 </tr>
-<tr>
-<td style="width: 128px;">&nbsp;</td>
-<td style="width: 10px;">&nbsp;</td>
-<td style="width: 66px;">&nbsp;</td>
-<td style="width: 93px;">&nbsp;</td>
-<td style="width: 88px;">&nbsp;</td>
-<td style="width: 71px;">&nbsp;</td>
-<td style="width: 71px;">&nbsp;</td>
+<tr style="height: 17px;">
+<td style="width: 8.65052%; height: 17px;">&nbsp;</td>
+<td style="width: 16.09%; height: 17px;">&nbsp;</td>
+<td style="width: 13.4948%; height: 17px;">&nbsp;</td>
+<td style="width: 16.955%; height: 17px;">&nbsp;</td>
+<td style="width: 16.09%; height: 17px;">&nbsp;</td>
+<td style="width: 13.1488%; height: 17px;">&nbsp;</td>
+<td style="width: 13.1488%; height: 17px;">&nbsp;</td>
 </tr>
-<tr>
-<td style="width: 128px;">&nbsp;</td>
-<td style="width: 10px;">&nbsp;</td>
-<td style="width: 66px;">&nbsp;</td>
-<td style="width: 93px;">&nbsp;</td>
-<td style="width: 88px;">&nbsp;</td>
-<td style="width: 71px;">&nbsp;</td>
-<td style="width: 71px;">&nbsp;</td>
+<tr style="height: 17px;">
+<td style="width: 8.65052%; height: 17px;">&nbsp;</td>
+<td style="width: 16.09%; height: 17px;">&nbsp;</td>
+<td style="width: 13.4948%; height: 17px;">&nbsp;</td>
+<td style="width: 16.955%; height: 17px;">&nbsp;</td>
+<td style="width: 16.09%; height: 17px;">&nbsp;</td>
+<td style="width: 13.1488%; height: 17px;">&nbsp;</td>
+<td style="width: 13.1488%; height: 17px;">&nbsp;</td>
 </tr>
-<tr>
-<td style="width: 128px;"><strong>16-17</strong></td>
-<td style="width: 10px;">&nbsp;</td>
-<td style="width: 66px;"><a href="https://meet.google.com/lookup/ezgnxljapy"target="_blank">PICCINNI</a></td>
-<td style="width: 93px;">&nbsp;</td>
-<td style="width: 88px;">&nbsp;</td>
-<td style="width: 71px;">&nbsp;</td>
-<td style="width: 71px;">&nbsp;</td>
+<tr style="height: 35px;">
+<td style="width: 8.65052%; height: 35px;"><strong>16-17</strong></td>
+<td style="width: 16.09%; height: 35px;">&nbsp;</td>
+<td style="width: 13.4948%; height: 35px;"><a href="https://meet.google.com/lookup/fsndiqpii3" target="_blank" rel="noopener">CRET&Igrave;</a></td>
+<td style="width: 16.955%; height: 35px;">&nbsp;</td>
+<td style="width: 16.09%; height: 35px;">&nbsp;</td>
+<td style="width: 13.1488%; height: 35px;">&nbsp;</td>
+<td style="width: 13.1488%; height: 35px;">&nbsp;</td>
 </tr>
-<tr>
-<td style="width: 128px;"><strong>17-18</strong></td>
-<td style="width: 10px;">&nbsp;</td>
-<td style="width: 66px;">&nbsp;<a href="https://meet.google.com/lookup/fsndiqpii3"target="_blank">CRET&Igrave;</a></td>
-<td style="width: 93px;">&nbsp;</td>
-<td style="width: 88px;">&nbsp;</td>
-<td style="width: 88px;">&nbsp;</td>
-<td style="width: 88px;">&nbsp;</td>
+<tr style="height: 35px;">
+<td style="width: 8.65052%; height: 35px;"><strong>17-18</strong></td>
+<td style="width: 16.09%; height: 35px;">&nbsp;</td>
+<td style="width: 13.4948%; height: 35px;">&nbsp;</td>
+<td style="width: 16.955%; height: 35px;">&nbsp;</td>
+<td style="width: 16.09%; height: 35px;"><a href="https://meet.google.com/lookup/ezgnxljapy" target="_blank" rel="noopener">PICCINNI</a></td>
+<td style="width: 13.1488%; height: 35px;">&nbsp;</td>
+<td style="width: 13.1488%; height: 35px;">&nbsp;</td>
 </tr>
 </tbody>
 </table>
-<meta charset=utf-8 />
-<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 <!-- SITO CREATO DA FRANCESCO SPEDICATO -->
